<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_activity"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="209dp"
        android:layout_height="209dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/washapp_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textColorHighlight="#3192CE"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/user"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@color/blue_optn"
        android:text="@string/log_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="16sp"
        android:text="@string/register" />

</RelativeLayout>
