<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_activity">

    <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/blue_snackbar"
    android:gravity="center_vertical"
    android:text="@string/receipt_title"
    android:textAlignment="gravity"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold"
    android:drawableStart="@drawable/hql_logo"
    android:drawablePadding="10dp"
    android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/selected_optn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:maxLines="3" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_optn"
        android:layout_centerHorizontal="true"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="start"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:hint="@string/address_hint"
        android:maxLines="8"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/address"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/payment" />

    <CheckBox
        android:id="@+id/pay_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/method"
        android:drawableEnd="@drawable/ic_monetization_24dp"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/pay_meth_1" />

    <CheckBox
        android:id="@+id/pay_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/method"
        android:layout_toEndOf="@id/pay_1"
        android:drawableEnd="@drawable/ic_credit_card_24dp"
        android:drawablePadding="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/pay_meth_2" />

    <TextView
        android:id="@+id/pay_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay_2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:minLines="3"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="*Todos los pagos se realizan posterior al trabajo. El pago con tarjeta genera un % de comisión
adicional al precio mostrado."/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay_alert"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true">

    <ImageButton
        android:id="@+id/check"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_check_24dp"
        android:background="@drawable/rnd_bttn_go"/>

    <ImageButton
        android:id="@+id/clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/check"
        android:layout_marginStart="70dp"
        android:src="@drawable/ic_clear_24dp"
        android:background="@drawable/rnd_bttn_cancel"/>
    </RelativeLayout>



</RelativeLayout>