<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_activity">
    <LinearLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_snackbar"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/hql_logo"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rnd_bttn_optn"
        android:layout_below="@id/snackbar"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_edit_24dp"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/account_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@id/snackbar"
        android:src="@drawable/ic_account_circle_24dp"/>


    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_image"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/birth_date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sex"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/edit_pwrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/blue_optn"
        android:text="@string/edit_pwrd"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/delete_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_pwrd"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/red_cancel"
        android:text="@string/delete_acc"
        android:clickable="true"
        android:focusable="true"/>


</RelativeLayout>